topcat: session codec now handles known subsets and current subset